[BankingAPI]     - Clients Adapters Implemented     - Clients Handlers Improved
