# docs/swagger.yaml
@@ -160,16 +160,11 @@ paths:
                 type: object
                 required:
                   - Id
-                  - Message
                 properties:
                   Id:
                     type: integer
                     format: int32
                     example: 20128
-                  Message:
-                    type: string
-                    format: uuid
-                    example: "User deleted"
         "400":
           description: User not found
           content:
@@ -601,11 +596,13 @@ paths:
         - in: query
           name: Document
           description: document number
+          required: true
           schema:
             type: string
         - in: query
           name: Password
           description: client password
+          required: true
           schema:
             type: string
       responses:
@@ -674,12 +671,12 @@ paths:
               schema:
                 type: object
                 required:
-                  - ClientId
+                  - ClientID
                   - UserID
                   - Name
                   - RegisterDate
                 properties:
-                  ClientId:
+                  ClientID:
                     type: integer
                     format: int32
                     example: 20128
@@ -733,6 +730,17 @@ paths:
       responses:
         "200":
           description: Client deleted sucessfully
+          content:
+            application/json:
+              schema:
+                type: object
+                required:
+                  - ClientID
+                properties:
+                  ClientID:
+                    type: integer
+                    format: int32
+                    example: 12345
         "400":
           description: Client not found
           content:
@@ -762,7 +770,7 @@ paths:
             type: integer
             format: int32
         - in: query
-          name: ClientName
+          name: Name
           description: name of the client to be updated
           required: false
           schema:
@@ -776,7 +784,7 @@ paths:
             type: string
             format: uuid
         - in: query
-          name: ClientPassword
+          name: Password
           description: Client's password to be updated
           required: false
           schema:
@@ -794,6 +802,7 @@ paths:
                   - Name
                   - Document
                   - RegisterDate
+                  - Status
                 properties:
                   Id:
                     type: integer
@@ -806,6 +815,10 @@ paths:
                     type: string
                     format: date-time
                     example: "2016-08-29T09:12:33.001Z"
+                  Status:
+                    type: boolean
+                    format: boolean
+                    example: true
         "400":
           description: Bad input parameter
           content:
@@ -1140,18 +1153,33 @@ paths:
             format: int32
       responses:
         "202":
-          description: Client blocked sucessfully
+          description: Client updated sucessfully
           content:
             application/json:
               schema:
                 type: object
                 required:
-                  - Message
+                  - Id
+                  - Name
+                  - Document
+                  - RegisterDate
+                  - Status
                 properties:
-                  Message:
+                  Id:
+                    type: integer
+                    format: int32
+                    example: 20128
+                  Name:
                     type: string
-                    format: uuid
-                    example: "Client blocked"
+                    example: "Carlos"
+                  RegisterDate:
+                    type: string
+                    format: date-time
+                    example: "2016-08-29T09:12:33.001Z"
+                  Status:
+                    type: boolean
+                    format: boolean
+                    example: true
         "400":
           description: Client not found
           content:
